; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_main.c_daemonize.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_main.c_daemonize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/dev/null\00", align 1
@O_WRONLY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"open\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"fork\00", align 1
@pidfile = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"fopen\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @daemonize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @daemonize(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32, i32* @O_WRONLY, align 4
  %8 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %67

13:                                               ; preds = %1
  %14 = call i64 (...) @fork()
  store i64 %14, i64* %4, align 8
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %18 = call i32 @exit(i32 -1) #3
  unreachable

19:                                               ; preds = %13
  %20 = load i64, i64* %4, align 8
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %19
  %23 = call i32 @exit(i32 0) #3
  unreachable

24:                                               ; preds = %19
  br label %25

25:                                               ; preds = %24
  %26 = call i32 (...) @setsid()
  %27 = call i64 (...) @fork()
  store i64 %27, i64* %4, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %31 = call i32 @exit(i32 -1) #3
  unreachable

32:                                               ; preds = %25
  %33 = load i64, i64* %4, align 8
  %34 = icmp sgt i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %32
  %36 = call i32 @exit(i32 0) #3
  unreachable

37:                                               ; preds = %32
  br label %38

38:                                               ; preds = %37
  %39 = load i64, i64* @pidfile, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %57

41:                                               ; preds = %38
  %42 = call i32 (...) @remove_pidfile()
  %43 = load i64, i64* @pidfile, align 8
  %44 = call i32* @fopen(i64 %43, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  store i32* %44, i32** %6, align 8
  %45 = load i32*, i32** %6, align 8
  %46 = icmp ne i32* %45, null
  br i1 %46, label %47, label %53

47:                                               ; preds = %41
  %48 = load i32*, i32** %6, align 8
  %49 = call i32 (...) @getpid()
  %50 = call i32 @fprintf(i32* %48, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 %49)
  %51 = load i32*, i32** %6, align 8
  %52 = call i32 @fclose(i32* %51)
  br label %56

53:                                               ; preds = %41
  %54 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %55 = call i32 @exit(i32 1) #3
  unreachable

56:                                               ; preds = %47
  br label %57

57:                                               ; preds = %56, %38
  %58 = call i32 @close(i32 0)
  %59 = call i32 @close(i32 1)
  %60 = call i32 @close(i32 2)
  %61 = load i32, i32* %5, align 4
  %62 = call i32 @dup2(i32 %61, i32 0)
  %63 = load i32, i32* %5, align 4
  %64 = call i32 @dup2(i32 %63, i32 1)
  %65 = load i32, i32* %5, align 4
  %66 = call i32 @dup2(i32 %65, i32 2)
  store i32 0, i32* %2, align 4
  br label %67

67:                                               ; preds = %57, %11
  %68 = load i32, i32* %2, align 4
  ret i32 %68
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i64 @fork(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @remove_pidfile(...) #1

declare dso_local i32* @fopen(i64, i8*) #1

declare dso_local i32 @fprintf(i32*, i8*, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @dup2(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
